gcc/testsuite/g++.dg/cpp2a/concepts-inherit-ctor2.C
@@ -9,10 +9,10 @@ template<typename T>
   };
 
 template<typename T>
-  struct S2 : S1<T> {
+  struct S2 : S1<T> { // { dg-error "matching" }
     using S1<T>::S1;
   };
 
 int main() {
-  S2<int> s; // { dg-error "no matching function" }
+  S2<int> s; // { dg-error "deleted function" }
 }
